# dinnr-singhacks-main

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  analysis.json  package-lock.json  payment_payload.json  pyproject.toml  pytest.ini  requirements.txt  sample.json
.claude/: settings.local.json
.specify/memory/: constitution.md
backend/: .env.example  .gitignore  API_TEST_RESULTS.md  GOOGLE_CLOUD_SETUP.md  Makefile  README.md  analysis.json  app.py  build_triage.py  build_triage_simple.py  config.py  debug_import.py  fix_logger_calls.py  main.py  payment_payload.json  requirements-dev.txt  requirements.txt  sample.json  test_api_with_pdfs.py  test_imports.py  test_vision.py  transaction_analysis_results.json  triage_request.json
backend/agents/: __init__.py
backend/core/: config.py  observability.py
backend/migrations/: 004_payment_analysis_tables.sql  env.py
backend/models/: __init__.py  alert.py  analysis_result.py  audit.py  document.py  payment.py  query_params.py  rules.py  transaction.py  verdict.py
backend/routers/: __init__.py  audit.py  document_analysis.py  document_audit.py  health.py  payment_analysis.py  payment_history.py
backend/scripts/: process_transactions.py  test_single_transaction.py
backend/services/: __init__.py  alert_service.py  audit_service.py  authenticity_service.py  document_service.py  history_service.py  llm_client.py  risk_scoring_service.py  rules_service.py  transaction_service.py  verdict_service.py
docs/: README.md  api_contract.md  architecture.md  json_examples.json  json_output_guide.md  json_schema.json
frontend/: CLAUDE.md  package-lock.json  package.json
(+203 files in other folders)
